# ke-engine

./: .gitignore  Makefile  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  config.yaml  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260630_0001_create_knowledge_document.py  202607010001_create_knowledge_document.py  202607060001_add_document_vector_storage_status.py  202607070001_add_document_knowledge_base_metadata.py  202607080001_add_data_query_spreadsheet_ingestion.py  202607140001_create_chat_conversation_persistence.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/common/: enums.py  pagination.py  response.py
backend/app/contracts/: __init__.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/domains/: __init__.py
backend/app/entrypoints/: __init__.py  agent_api.py  celery_worker.py  chat_api.py  document_api.py  document_worker.py  rag_query_rewrite_studio.py  rag_studio.py  studio_graph.py
backend/app/evaluation/: __init__.py  business_understanding_langfuse.py  rag_query_rewrite.py  upsert_business_understanding_dataset.py
backend/app/identity/: __init__.py  config.py  dependencies.py  errors.py  middleware.py  principal.py  provider.py
backend/app/infrastructure/: __init__.py  celery.py  celery_app.py  elasticsearch.py  kafka.py  langfuse.py  langgraph.py  llm.py  magika.py  mineru.py  minio.py  (+3 more)
backend/tests/: chat_graph_test_support.py  chat_postgres_support.py  conftest.py  rag_query_rewrite_test_support.py  test_agent_domain_layout.py  test_backend_makefile.py  test_business_understanding_evaluation.py  test_business_understanding_langfuse.py  test_business_understanding_models.py  test_business_understanding_node.py  test_business_understanding_postgres.py  test_business_understanding_prompt.py  test_celery_app.py  test_celery_worker_host.py  test_chat_api.py  test_chat_api_lifespan.py  test_chat_completion_api.py  test_chat_completion_disconnect.py  test_chat_completion_lock.py  test_chat_completion_producer.py  test_chat_completion_resume.py  test_chat_config.py  test_chat_contracts.py  test_chat_conversation_service.py  test_chat_failure_consistency_postgres.py  test_chat_graph.py  test_chat_graph_clarification.py  test_chat_graph_routing.py  test_chat_langgraph_infrastructure.py  test_chat_langgraph_postgres.py  test_chat_llm_integration.py  test_chat_migration.py  test_chat_module.py  test_chat_persistence.py  test_chat_query_api.py  test_chat_repositories.py  test_chat_router.py  test_chat_service.py  test_chat_settings.py  test_chat_sse_adapter.py  (+53 more)
(+328 files in other folders)
