[project]
name = "ke-engine"
version = "0.1.0"
description = "FastAPI application skeleton for ke-engine."
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "langchain-openai>=1.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
