[project]
name = "ke-engine"
version = "0.1.0"
description = "FastAPI application skeleton for ke-engine."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.5.0,<6.0.0",
    "confluent-kafka>=2.15.0,<3.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "langchain>=1.3.14,<2.0.0",
    "langchain-elasticsearch>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.14.1,<5.0.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "magika>=1.0.3",
    "minio>=7.2.20",
    "openpyxl>=3.1.5",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.32",
    "python-redis-lock>=4.0.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.32.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.31,<0.5.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["integration: tests requiring local infrastructure"]
